Add footer, improve appearance

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,34 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <i class="fa fa-spinner fa-spin" style="font-size:24px"></i> Loading...
+  </app-root>
+  
+  
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <p class="col-md-2">
+          <a href="http://soloydenko.com"><i class="fa fa-link" aria-hidden="true"></i> soloydenko.com</a>
+        </p>
+        <p class="col-md-2">
+          <a href="https://github.com/another-guy"><i class="fa fa-github" aria-hidden="true"></i> another-guy</a>
+        </p>
+        <p class="col-md-2">
+          <a href="https://codereview.stackexchange.com/users/10983/igor-soloydenko?tab=profile"><i class="fa fa-stack-exchange" aria-hidden="true"></i> Code Review</a>
+        </p>
+        <p class="col-md-2">
+          <a href="https://allegorio.com"><i class="fa fa-wordpress" aria-hidden="true"></i> allegorio</a>
+        </p>
+        <p class="col-md-2">
+          <a href="https://www.linkedin.com/in/igorsoloydenko/"><i class="fa fa-linkedin" aria-hidden="true"></i> Igor Soloydenko</a>
+        </p>
+        <p class="col-md-2">
+          <a href="skype:soloydenko.igor?userinfo"><i class="fa fa-skype" aria-hidden="true"></i> soloydenko.igor</a>
+        </p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
